<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Where2Night</string>
    <string name="app_id">424508544315541</string>
    <string name="login_error">El email o la contraseña no es correcto</string>
    <string name="login_error_connection">Error de conexión</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="LogIn">Iniciar Sesion</string>
    <string name="drawer_open">Abrir</string>
    <string name="drawer_close">Cerrar</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="login_fb">Inciar sesión</string>
    <string name="login_google">LogIn con Google+</string>
    <string name="login_email">Iniciar sesión</string>
    <string name="login_salir">Cerrar sesión</string>
    <string name="registerErrorPasswords">Las contraseñas no coinciden</string>
    <string name="registro">Registro</string>
    <string name="sign_out_button_name">Sign out</string>
    <string name="revoke_access_button_name">Revoke access</string>
    <string name="default_status" />
    <string name="signing_in_status">Signing in with Google+.</string>
    <string name="signed_in_status">Signed in as \"%s\".</string>
    <string name="unknown_person">Unknown</string>
    <string name="loading_status">Loading…</string>
    <string name="revoke_access_status">Revoked access.</string>
    <string name="revoke_access_error_status">Unable to revoke access.</string>
    <string name="signed_out_status">Signed out.</string>
    <string name="email">Email</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="date">Fecha de nacimiento (dd/mm/aaaa)</string>
    <string name="contrasena">Contraseña</string>
    <string name="contrasena2">Repite la contraseña</string>
    <string name="oldPassword">Contraseña actual</string>
    <string name="enviar">Enviar</string>
    <string name="sinRegistro">¿No tienes cuenta? ¡Registrate! </string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="register">Empieza la Fiesta!</string>
    <string name="conCuenta">¿Ya tienes cuenta? ¡Accede!</string>

    <string-array name="drawer_options">
        <item>Inicio</item>
        <item>Mi Perfil</item>
        <item>Eventos</item>
        <item>Amigos</item>
        <item>Locales</item>
        <item>Mensajes</item>
        <item>Gramola</item>
    </string-array>

    <string name="title_activity_init"></string>
    <string name="title_activity_local_view"></string>
    <string name="btn_local_map">Mapa</string>
    <string name="btn_local_events">Eventos</string>
    <string name="btn_local_lists">Listas</string>
    <string name="btn_local_attendees">Asistentes</string>
    <string name="btn_local_jukebox">Gramola</string>
    <string name="title_activity_registro">Registro</string>
    <string name="title_activity_login_email">Login</string>
    <string name="title_activity_edit_profile">Editar Perfil</string>
    <string name="app_name_description">Where2Night</string>
    <string name="title_activity_splash"></string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="about">Acerca de ti</string>
    <string name="city">Ciudad Actual</string>
    <string name="civil_state">Estado Civil</string>
    <string name="music">Música Preferida</string>
    <string name="drink">Bebida Favorita</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="search">Buscar</string>
    <string name="animo">¿Con qué animo sales hoy?</string>
    <string name="title_activity_dj_view_activty">DjViewActivty</string>
    <string name="NameAndSurnameDj">Nombre: </string>
    <string name="Birthday">Cumpleaños: </string>
    <string name="MusicDj">Estilo Musical: </string>
    <string name="AboutMeDj">Sobre mí: </string>
    <string name="FollowMe">Sígueme</string>
    <string name="Following">Siguiendo</string>
    <string name="Followers">Seguidores: </string>
    <string name="SignMe">Apuntame</string>
    <string name="Signed">Apuntado</string>
    <string name="MusicLocal">Tipo de Musica: </string>
    <string name="EntryPrice">Precio de la entrada: </string>
    <string name="DrinkPrice">Precio medio por copa: </string>
    <string name="OpeningHour">Hora de apertura: </string>
    <string name="ClosingHour">Hora de cierre: </string>
    <string name="Ubication">Ubicación </string>
    <string name="IGo">Quiero ir </string>
    <string name="IDontGo">Dejar de ir </string>
    <string name="Going">Voy a ir </string>
    <string name="Friends">Número de amigos: </string>
    <string name="NameAndSurnameFriend">Nombre: </string>
    <string name="MusicFriendLike">Estilo musical preferido: </string>
    <string name="AboutMeFriend">Sobre mí: </string>
    <string name="AddAsFriend">Añadir como amigo</string>
    <string name="PrivateMessage">Mensaje privado</string>
    <string name="Peticiones">Peticiones de amistad</string>
    <string name="NewMessages">Nuevos mensajes</string>

    <string-array name="mode_array">
        <item>De tranquis</item>
        <item>Hoy no me lio</item>
        <item>Lo que surja</item>
        <item>Lo daré todo</item>
        <item>Destroyer</item>
        <item>Yo me llamo Ralph</item>
    </string-array>
    <string-array name="bebida_array">
        <item>Sin seleccionar</item>
        <item>Agua con gas</item>
        <item>Agua sin gas</item>
        <item>Anís</item>
        <item>Bourbon</item>
        <item>Brandy</item>
        <item>Calimocho</item>
        <item>Cava</item>
        <item>Cerveza</item>
        <item>Champagne</item>
        <item>Coñac</item>
        <item>Energetica</item>
        <item>Ginebra</item>
        <item>Licor con alcohol</item>
        <item>Refresco con gas</item>
        <item>Refresco sin gas</item>
        <item>Ron añejo</item>
        <item>Ron blanco</item>
        <item>Sidra</item>
        <item>Tequila</item>
        <item>Vermouth</item>
        <item>Vino</item>
        <item>Vodka</item>
        <item>Whisky</item>
        <item>Zumo</item>
    </string-array>
    <string-array name="estado_civil_array">
        <item>Sin seleccionar</item>
        <item>Sin compromiso</item>
        <item>Ennoviad@</item>
        <item>Con novi@, pero no es un problema</item>
        <item>Buscando rollete</item>
        <item>Casad@</item>
        <item>Divorciad@</item>
        <item>Viud@</item>
    </string-array>
    <string-array name="musica_array">
        <item>Sin seleccionar</item>
        <item>Acid-House</item>
        <item>Alternative Rock</item>
        <item>Beatbox</item>
        <item>Black Metal</item>
        <item>Country</item>
        <item>Death-Metal</item>
        <item>Deep-House</item>
        <item>Disco</item>
        <item>Drum n Bass</item>
        <item>Electro</item>
        <item>EuroPop</item>
        <item>Folk</item>
        <item>Folk-Rock</item>
        <item>Funk</item>
        <item>Hard-Trance</item>
        <item>Hard-House</item>
        <item>Hard-Rock</item>
        <item>Hardcore</item>
        <item>HardStyle</item>
        <item>Heavy Metal</item>
        <item>Hip Hop</item>
        <item>House</item>
        <item>Indie-Rock</item>
        <item>Italo-Disco</item>
        <item>Italo-Dance</item>
        <item>Jungle</item>
        <item>Latin</item>
        <item>Makina</item>
        <item>Minimal</item>
        <item>Pachanga</item>
        <item>Pop Rock</item>
        <item>Progressive House</item>
        <item>Progressive Trance</item>
        <item>Punk</item>
        <item>Reggae</item>
        <item>Reggaeton</item>
        <item>Rock and Roll</item>
        <item>Ska</item>
        <item>Soul</item>
        <item>Soul-Jazz</item>
        <item>Tech-House</item>
        <item>Techno</item>
    </string-array>

    <string name="Detranquis">"De tranquis"</string>
    <string name="Hoynomelio">"Hoy no me lio"</string>
    <string name="Loquesurja">"Lo que surja"</string>
    <string name="Lodaretodo">"Lo daré todo"</string>
    <string name="Destroyer">"Destroyer"</string>
    <string name="YomellamoRalph">"Yo me llamo Ralph"</string>

    <string-array name="local_tabs">
        <item>Info</item>
        <item>Eventos</item>
        <item>Listas</item>
        <item>Gramola</item>
        <item>Fotos</item>
        <item>Estadísticas</item>
        <item>Asistentes</item>
    </string-array>
    <string-array name="dj_tabs">
        <item>Info</item>
        <item>Eventos</item>
    </string-array>
    <string-array name="friend_tabs">
        <item>Actividad</item>
        <item>Info</item>
    </string-array>
    <string-array name="editProfile_tabs">
        <item>Básica</item>
        <item>Detallada</item>
        <item>Contraseña</item>
    </string-array>
    
     <string-array name="invited_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="Search">Search</string>
    <string name="Notifications">Notificaciones</string>
    <string name="search_hint">Búsqueda</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="FriendRequest">Peticiones de amistad</string>
    <string name="AcceptFriendRequest">Aceptar peticion</string>
    <string name="IgnoreFriendRequest">Ignorar</string>
    <string name="delete_friend">Eliminar amigo</string>
    <string name="title_activity_jukebox_view">JukeboxViewActivity</string>
    <string name="title_activity_photo_view">PhotoViewActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_messages_view">MessagesViewActivity</string>

</resources>
