<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    
    <item 	android:id="@+id/action_notifications"
	        android:actionLayout="@layout/actionbar_notifications"
	        android:icon="@drawable/ic_action_add_person"
	        android:title="@string/Notifications"
	        android:showAsAction="always" />
    
   <item 	android:id="@+id/action_search"
   			android:icon="@drawable/ic_action_search"
	        android:title="@string/Search"
	        android:showAsAction="always"
	        android:actionViewClass="android.widget.SearchView"/>
   
    
    <item 	android:id="@+id/action_edit_profile"
        	android:orderInCategory="100"
      		android:showAsAction="never"
      		android:title="@string/edit_profile"/>
    
    <item 	android:id="@+id/action_logout"
	        android:orderInCategory="100"
	      	android:showAsAction="never"
	      	android:title="@string/login_salir"/>

</menu>
