<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="10dp" >
 
		 <ImageView
	        android:id="@+id/imgLocal"
	        android:layout_width="match_parent"
	        android:layout_height="150dp"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:src="@drawable/local" />
    
	    <TextView
	        android:id="@+id/txtLocalFollowers"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/imgLocal"
	        android:text="@string/Followers" />
	    
	    <TextView
	        android:id="@+id/txtOpening"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/txtLocalFollowers"
	        android:text="@string/OpeningHour" />
	    <TextView
	        android:id="@+id/txtClosing"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/txtOpening"
	        android:text="@string/ClosingHour" />
	    <TextView
	        android:id="@+id/txtMusicType"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/txtClosing"
	        android:text="@string/MusicLocal" />
	    <TextView
	        android:id="@+id/txtEntryPrice"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/txtMusicType"
	        android:text="@string/EntryPrice" />
	    <TextView
	        android:id="@+id/txtDrinkPrice"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/txtEntryPrice"
	        android:text="@string/DrinkPrice" />
    



	    <Button
	        android:id="@+id/btnFollowMe"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_above="@+id/txtEntryPrice"
	        android:layout_alignParentRight="true"
	        android:layout_margin="15dp"
       		android:layout_marginRight="14dp"
	        android:background="@drawable/btn_igo_style"
	        android:text="@string/FollowMe" />

	    <TextView
	        android:id="@+id/txtUbication"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/txtDrinkPrice"
	        android:layout_centerHorizontal="true"
	        android:text="@string/Ubication" />
	    
    
        <FrameLayout
	        android:id="@+id/LocalInfoMap"
	        android:layout_width="match_parent"
	        android:layout_height="350dp"
	        android:layout_below="@id/txtUbication" />

</RelativeLayout>
</ScrollView>