<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    tools:context=".EditProfileActivity" >
	    
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

	    <TextView
	        android:id="@+id/txtMusic"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:textColor="@color/app_color"
	        android:layout_marginTop="10dp"
	        android:text="@string/music" />
	    
	    <Spinner
	        android:id="@+id/spinnerMusica"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/txtMusic"
	        android:layout_alignParentLeft="true"
	        android:textColor="@color/app_color"
	        android:layout_alignRight="@+id/spinnerEstadoCivil" />
	    
	    <TextView
	        android:id="@+id/txtDrink"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:textColor="@color/app_color"
	        android:layout_marginTop="5dp"
	        android:layout_below="@+id/spinnerMusica"
	        android:text="@string/drink" />
	    
	    <Spinner
	        android:id="@+id/spinnerBebida"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:textColor="@color/app_color"
	        android:layout_below="@+id/txtDrink" />
	    
	    <TextView
	        android:id="@+id/txtCivilState"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:textColor="@color/app_color"
	        android:layout_marginTop="5dp"
	        android:layout_below="@+id/spinnerBebida"
	        android:text="@string/civil_state" />

	    <Spinner
	        android:id="@+id/spinnerEstadoCivil"
	        android:textColor="@color/app_color"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@id/txtCivilState" />

	    <ProgressBar
	        android:id="@+id/pgEdit"
	        style="?android:attr/progressBarStyleLarge"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:visibility="gone" />
	    
	    <EditText
	        android:id="@+id/etEditCity"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/spinnerEstadoCivil"
	        android:ems="10"
	        android:hint="@string/city"
	        android:padding="10dp"
	        android:textColor="@color/app_color"
	        android:textColorHint="@color/hint_color"
	        android:textCursorDrawable="@null" />

	    
	    
	    <EditText
	        android:id="@+id/etEditFB"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/etEditCity"
	        android:ems="10"
	        android:hint="@string/facebook"
	        android:padding="10dp"
	        android:textColor="@color/app_color"
	        android:textColorHint="@color/hint_color"
	        android:textCursorDrawable="@null" />
	    
	    <EditText
	        android:id="@+id/etEditTW"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/etEditFB"
	        android:ems="10"
	        android:hint="@string/twitter"
	        android:padding="10dp"
	        android:textColor="@color/app_color"
	        android:textColorHint="@color/hint_color"
	        android:textCursorDrawable="@null" />
	    
	    <EditText
	        android:id="@+id/etEditIG"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/etEditTW"
	        android:ems="10"
	        android:hint="@string/instagram"
	        android:padding="10dp"
	        android:textColor="@color/app_color"
	        android:textColorHint="@color/hint_color"
	        android:textCursorDrawable="@null" />

	    <EditText
	        android:id="@+id/etEditAbout"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentBottom="true"
	        android:layout_below="@+id/etEditIG"
	        android:ems="10"
	        android:hint="@string/about"
	        android:inputType="textMultiLine"
	        android:padding="10dp"
	        android:textColor="@color/app_color"
	        android:textColorHint="@color/hint_color"
	        android:textCursorDrawable="@null" >
	    </EditText>
	    

	</RelativeLayout>

</ScrollView>