<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imgTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:src="@drawable/topimage" />

        <EditText
            android:id="@+id/etRegisterName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgTop"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:hint="@string/nombre"
            android:inputType="text"
            android:padding="20dp"
            android:textColor="@color/app_color"
            android:textColorHint="@color/hint_color"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/etRegisterSurname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etRegisterName"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/apellidos"
            android:inputType="text"
            android:padding="20dp"
            android:textColor="@color/app_color"
            android:textColorHint="@color/hint_color"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/etRegisterDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etRegisterSurname"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/date"
            android:inputType="date"
            android:padding="20dp"
            android:textColor="@color/app_color"
            android:textColorHint="@color/hint_color"
            android:textCursorDrawable="@null" />
        
        
        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/etRegisterDate"
	        android:layout_alignRight="@+id/btnEnviarEstado"
            android:orientation="horizontal" >

            <RadioButton
	            android:id="@+id/rdFemale"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/female"
	            android:textColor="@color/app_color"
	            android:textSize="20sp" />

            <RadioButton
	            android:id="@+id/rdMale"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/male"
	            android:textColor="@color/app_color"
	            android:textSize="20sp" />

         
        </RadioGroup>

        <EditText
            android:id="@+id/etRegisterEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rgGender"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textColor="@color/app_color"
            android:textColorHint="@color/hint_color"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/etRegisterPass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etRegisterEmail"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@color/app_color"
            android:textColorHint="@color/hint_color"
            android:textCursorDrawable="@null" />
        
        <EditText
            android:id="@+id/etRegisterPass2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etRegisterPass"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/contrasena2"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@color/app_color"
            android:textColorHint="@color/hint_color"
            android:textCursorDrawable="@null" />

        <TextView
            android:id="@+id/link_to_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnEnviarEstado"
            android:layout_margin="25dip"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/conCuenta"
            android:textColor="@color/app_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/register_error"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/link_to_login"
            android:layout_margin="25dip"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/app_color"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/pgRegister"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/rgGender"
            android:layout_alignTop="@+id/btnEnviarEstado"
            android:layout_marginRight="38dp" />

        <Button
            android:id="@+id/btnEnviarEstado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etRegisterPass2"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dip"
            android:layout_marginTop="22dp"
            android:background="@drawable/button_style"
            android:padding="10dp"
            android:text="@string/register"
            android:textColor="@color/white" />

    </RelativeLayout>

</ScrollView>