<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/background" >

    <ImageView
        android:id="@+id/imgTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:src="@drawable/topimage" />

    <EditText
        android:id="@+id/txtLoginEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#ffa500"
        android:textColor="#ffa500" 
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:layout_marginBottom="10dp"
        android:padding="20dp"
        android:textCursorDrawable="@null"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/txtLoginPass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:layout_marginBottom="10dp"
        android:textColorHint="#ffa500"
        android:textColor="#ffa500" 
        android:hint="@string/contrasena"
        android:inputType="textPassword" />

 <RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="fill_parent" >   
  
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="100dp"
	    android:layout_marginRight="43dp"
	    android:layout_marginBottom="10dp"
	    android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_style"
        android:text="@string/enviar" />

    <TextView
        android:id="@+id/login_error"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/link_to_register"
        android:layout_marginTop="29dp"
        android:gravity="center"
        android:textColor="#0b84aa"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/link_to_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnLogin"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/sinRegistro"
        android:textColor="#ffa500"
        android:textSize="20sp" />

    <ProgressBar
        android:id="@+id/pgLoginEmail"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnLogin"
        android:layout_alignRight="@+id/btnLogin"
        android:layout_marginRight="93dp" />

   </RelativeLayout> 

</LinearLayout>